<resources>
    <string name="app_name">NASA 9</string>


    <string name="title">Look at my GUI</string>
    <string name="button">Click Here</string>
    <string name="checkbox">Check this out!</string>
    <string name="switchbox">Switch on / off</string>
    <string name="textbox">Type here</string>
    <string name="toast">Here\'s more information</string>
    <string name="snackbar_off">The switch is now off</string>
    <string name="snackbar_on">The switch is now on</string>
    <string name="snackbar_undo">Undo</string>

    <!-- Splash Screen -->
    <color name="backGround">#555555</color>
    <string name="welcome">Welcome</string>
    <string name="startButton">Begin</string>
    <string name="appTitle">NASA 9</string>
    <string name="enterEmail">Type email here.</string>
    <string name="passwordTitle">Type your password eh.</string>
    <string name="loginButton">Login</string>
    <string name="enterEmailHint">Type email here</string>

    <!-- Home-->
    <string name="home_title">HOME</string>
    <string name="home_text">"News: "NASA 9 1.0 publié"</string>

    <string name="alert_imagelist_title">Collection d\'images</string>
    <string name="alert_imagelist">Ceci est une collection de vos images enregistrées</string>

    <string name="alert_home_title">NASA 9 Nouvelles</string>
    <string name="alert_home">Vérifiez ici souvent pour les dernières nouvelles!</string>

    <string name="alert_mail_title">Coordonnées</string>
    <string name="alert_mail">Retrouvez les coordonnées dans cette rubrique.</string>


    <!-- Mail-->
    <string name="mail_title">MAIL</string>
    <string name="mail_text">"Email: "mcar0057@algonquinlive.com"</string>


    <!-- Alerts-->
    <string name="alert_latlong_title">Get Satellite Image</string>
    <string name="alert_latlong">Type in a latitude and logitutde then click GET SATELLITE IMAGE, you can also save an image to your favorites list!</string>


    <string name="profileProfile">Your profile.</string>
    <string name="profileYourName">Your Name.</string>
    <string name="profileEnterName">Enter your name here.</string>
    <string name="profileYourEmail">Your Email</string>
    <string name="profileYourPicture">Your Picture</string>

    <!-- Profile Activity-->
    <string name="goToChat">Go to chat</string>
    <string name="goToolbar">Go to toolbar</string>
    <string name="typeHere">Type here</string>
    <string name="receiveButtonText">Receive</string>
    <string name="sendButtonText">Send</string>
    <string name="profile_weather_forecast_button">Weather</string>

    <string name="profileClickButton">Click the button above to take a picture.</string>

    <!-- Lat Long Get Satellite Image -->
    <string name="submit_button">Enregistrer l\'image</string>
    <string name="latorlongempty">Veuillez saisir une latitude et une longitude.</string>
    <string name="searching">recherche</string>
    <string name="get_image">obtenir une image satellite</string>
    <string name="lat_enter">entrer la latitude</string>
    <string name="long_enter">entrer la longitude</string>
    <string name="image_date">Date: %1$s</string>
    <string name="image_lat">Lat: %1$s</string>
    <string name="image_long">Long: %1$s</string>


    <string name="open">Open</string>
    <string name="close">Close</string>


</resources>