<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">


    <Button
        android:id="@+id/goChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/goToChat"
        android:textAlignment="center" />

    <Button
        android:id="@+id/goToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/goToolbar"
        android:textAlignment="center" />


    <TextView
        android:id="@+id/profileProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/profileProfile"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/profileYourName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/profileYourName"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/profileEnterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/profileEnterName"
        android:inputType="textPersonName|textCapWords" />

    <TextView
        android:id="@+id/profileYourEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/profileYourEmail"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/enterEmail"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/profileYourPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/profileYourPicture"
        android:textSize="25dp" />

    <ImageButton
        android:id="@+id/profileTakePictureButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@android:drawable/picture_frame"
    android:textAlignment="center" />

    <TextView
        android:id="@+id/profileClickButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/profileClickButton"
        android:textSize="25dp" />

    <Button
        android:id="@+id/weather_forecast_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_weather_forecast_button" />

</LinearLayout>