<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ChatRoomActivity">

    <include layout="@layout/activity_test_toolbar"/>
    <ListView
        android:paddingTop="80dp"
        android:id="@+id/theListView"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:transcriptMode="alwaysScroll"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:paddingTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"

        android:layout_marginHorizontal="6dp"
        android:layout_marginVertical="6dp">

        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/sendButtonText" />

        <EditText
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:hint="@string/typeHere"
            android:inputType="text" />

        <Button
            android:id="@+id/button_receive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/receiveButtonText" />
    </LinearLayout>




</RelativeLayout>