<?xml version="1.0" encoding="utf-8"?>









<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LatLong">

    <include layout="@layout/activity_test_toolbar" />


   <!-- <include android:layout="@layout/activity_test_toolbar"/>
    <include layout="@layout/activity_test_toolbar"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingTop="100dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/lat_enter"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:hint="@string/lat_enter"
            android:inputType="textPersonName|textCapWords" />

        <EditText
            android:id="@+id/long_enter"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:hint="@string/long_enter"
            android:inputType="textPersonName|textCapWords" />

        <Button
            android:id="@+id/get_sat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_image" />

        <ImageView
            android:src="@drawable/earth"
            android:id="@+id/sat_image"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <TextView
            android:id="@+id/current_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/uv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/max_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/min_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>